--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@
 
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1100px;
   }
 }
 
@@ -39,11 +39,20 @@ body {
   font-family: "Open Sans", sans-serif;
   overflow-x: hidden;
   background-color: var(--section-background);
-  height: 100000px;
+  /* height: 100000px; */
 }
 
 /* ========== Start Global classes ========== */
-
+.fS-13{
+  font-size: 13px;
+}
+.flexColumn{
+  flex-direction: column;
+}
+.bold{
+  font-weight: bold;
+  font-size: 30px;
+}
 .btn {
   outline: none;
   border: none;
@@ -118,6 +127,9 @@ body {
 }
 .mt-100 {
   margin-top: 100px;
+}
+.mt-10 {
+  margin-top: 25px;
 }
 
 .mb-100 {
@@ -1034,17 +1046,14 @@ width: 95%;
   top: 0;
   /* left: 0; */
   right: 0;
-  /*text-align: center;
-  */position: absolute;
-  /* display: flex; */
-  /* align-items: center; */
-  /* margin-top: ; */
+  position: absolute;
+
   width:55px;
   height: 55px;
-  /*background-color: rgba(white,3);
-  */background-color: #eee;
-  /*background-color: red;
-  */opacity: 0;
+  
+  background-color: #eee;
+  
+  opacity: 0;
   z-index: -1;
   transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
@@ -1053,8 +1062,6 @@ width: 95%;
   -o-transition: all 0.4s ease-in-out;
 }
 .howItWorks .howItWorksItem:hover span {
-  /* animation: howItWorks 0.5s  ; */
-  /* -webkit-animation: howItWorks 0.5s  ; */
   opacity: 1;
 
   width: 100%;
@@ -1064,26 +1071,231 @@ width: 95%;
 
 
 .howItWorks .howItWorksItem .img{
-  /* width: 75px; */
   width: 123px;
   margin-right: 20px;
-  /* margin-bottom: 20px; */
+  
 }
 .howItWorks .howItWorksItem .img img{
   width: 100%;
 }
 /* ======== End      how it works ========  */
 
+/* ======== Start      pricePlan ========  */
+.pricePlan {
+  /* background-color: #fff; */
+  min-height: 300px;
+  padding: 60px 0px;
+}
+.pricePlan .pricePlanItems{
+
+  display: grid;
+grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+gap: 50px 30px;
+}
+
+.pricePlan .pricePlanItem{
+  background-color: rgb(255, 255, 255);
+  /* width: 300px; */
+  height: 600px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+}
+.pricePlan .pricePlanItem .mostpopular{
+  background-color: #03a9f4;
+  color: #fff;
+  padding: 10px 35px 10px 10px;
+  /* width: 170px; */
+  /* clip-path: polygon(88% 0, 67% 49%, 88% 100%, 0 100%, 0 0); */
+  position: absolute;
+  width: 183px;
+  clip-path: polygon(88% 0, 67% 49%, 88% 100%, 0 100%, 0 0);
+  position: absolute;
+  top: 70px;      right: -30px;
+      font-weight: 550;
+  transform: rotateZ(90deg);
+  -webkit-transform: rotateZ(90deg);
+  -moz-transform: rotateZ(90deg);
+  -ms-transform: rotateZ(90deg);
+  -o-transform: rotateZ(90deg);
+}
+.pricePlan .pricePlanItem .details{
+  text-align: center ;
+}
+.pricePlan .pricePlanItem .details img{
+  /* color: #03a9f4; */
+  /* font-size: 55px; */
+  width: 70px;
+  margin-top: 17px;
+}
+.pricePlan .pricePlanItem .details .Blue{
+  font-size: 40px;
+}
+.pricePlan .pricePlanItem .details p{
+  margin-top: 0;
+}
+
+.pricePlan .pricePlanItem .ul{
+  align-self: flex-start;
+}
+
+.pricePlan .pricePlanItem .ul li{
+  padding: 15px 0px;
+  /* border-top: 1px solid  */
+  /* #eeee; */
+  width: 500%;
+  position: relative;
+
+}
+.pricePlan .pricePlanItem .ul li::after{
+
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #eee;
+  /* background-color:red; */
+  left: -20px;
+  top: 0;
+}
+
+.pricePlan .pricePlanItem .ul li::before{
+  /* font-family: "Font Awesome 5 Free";  */
+  content: "\f00c";
+  /* width: 10px; */
+  /* height: 10px; */
+  font-family: "Font Awesome 5 Free"; font-weight: 600; content: "\f00c";
+margin-right: 10px;
+
+
+  color: #2196f3;
+  /* border-color;red: */
+}
+
+.pricePlan .pricePlanItem .btn
+{
+  font-size: 16px;
+  text-transform: capitalize;
+  font-weight: bold;
+  border: 2px solid #03a9f4;
+  border-radius: 5px;
+  background: transparent;
+  font-size: 15px;
+  color: #2196f3;
+  transition: all .5s;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -ms-transition: all .5s;
+  -o-transition: all .5s;
+}
+.pricePlan .pricePlanItem .btn:hover{
+  background-color: #03a9f4;
+  color: #FFF;
+  cursor:pointer
+}
 
 
 
+/* ======== End      pricePlan ========  */
 
 
+/* ======== Start      topVideo ========  */
+.topVideo {
+  background-color: #fff;
+  min-height: 300px;
+  padding: 60px 0px;
+  
+}
+
+.topVideo .topVideoItems{
+  width: 100%;
+  border: 1px solid #eee;
+  min-height: 400px;
+  background-color:#d5d5d5
+}
+.topVideo .topVideoItems{
+}
+.topVideo .topVideoItems  .list{
+  background-color: #fff;
+  flex-basis: 25%;
+
+}
+.topVideo .topVideoItems  .list {
+  /* padding: 10px; */
+}
+.topVideo .topVideoItems  .list ul li
+
+{
+  padding: 14px;
+  position: relative;
+  transition: all .4s;
+  -webkit-transition: all .4s;
+  -moz-transition: all .4s;
+  -ms-transition: all .4s;
+  -o-transition: all .4s;
+}
+.topVideo .topVideoItems  .list ul li:hover
+{
+background-color: rgba(238, 238, 238, 0.336);
+color: #03a9f4;
+cursor: pointer;
+height: 100%;
+}
+.topVideo .topVideoItems  .list ul li::after{
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  left: 0;
+  position: absolute;
+  background-color: #eee;
+  top: 0px;
+  /* border-top: 1px solid black; */
+}
+.topVideo .topVideoItems  .list .head{
+  padding: 20px;
+  background-color: #eee;
+  font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+  
+}
 
 
+.topVideo .topVideoItems .video{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  justify-content: space-between;
 
+}
+.topVideo .topVideoItems .video .img{
+  width: 100%;
+}
+.topVideo .topVideoItems .video .img img{
+  width: 100%;
+}
 
+.topVideo .topVideoItems .video p
+{
 
+  width: 100%;
+  padding: 15px;
+  margin-top: 10px;
+  background-color: #fff;
+}
+/* ======== End        topVideo ========  */
 
 
 
@@ -1222,6 +1434,14 @@ width: 95%;
     margin-right: 20px;
     /* width: 50%; */
     }
+
+
+
+
+
+    .topVideo .topVideoItems {
+      display: flex;
+    }
 }
 @media (max-width: 992px) {
   /* ========== Start   details ========== */
@@ -1232,16 +1452,24 @@ width: 95%;
   /* ========== End   details ========== */
 
 
-  .howItWorks .howItWorksItems {
+  /* .howItWorks .howItWorksItems { */
     /* display: flex;  */
     /* align-items: center; */
     
-    }
+    /* } */
 }
 @media (max-width: 1200px) {
 }
 
-@media (min-width: 1201px) {
+@media (min-width: 1200px) {
+
+  .pricePlan .pricePlanItems .advanced{
+    transform: translateY(-25px);
+    -webkit-transform: translateY(-25px);
+    -moz-transform: translateY(-25px);
+    -ms-transform: translateY(-25px);
+    -o-transform: translateY(-25px);
+}
 }
 
 /*========== End   Media query  ========== */
